[metadata]
name = postmanager
version = 0.1.5
description = Post manager to manage all post types with various storage backends
long_description = file: README.md
long_description_content_type = text/markdown
license= MIT
license_file= LICENSE
platforms = unix, linux, osx, cygwin, win32
author = Pierre du Toit
github_project = https://github.com/subaquatic-pierre/postmanager
author_email= subaquatic.pierre@gmail.com
project_urls=
    Source = https://github.com/subaquatic-pierre/postmanager
    Tracker = https://github.com/alexmalins/subaquatic-pierre/postmanager/issues
    Documentation = https://subaquatic-pierre.github.io/postmanager
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
package_dir =
    = src
packages = find:
entry_points =
    console_scripts = 
        postmanager = postmanager.cli:main

[options]
packages = find:
python_requires = >=3.7,<4
install_requires =
    boto3