[metadata]
name = postmanager
version = 0.1.5
description = Post manager to manage all post types with various storage backends
long_description = file: README.md
long_description_content_type = text/markdown
license= MIT
license_file= LICENSE
platforms = unix, linux, osx, cygwin, win32
author = Pierre du Toit
github_project = https://github.com/subaquatic-pierre/postmanager
author_email= subaquatic.pierre@gmail.com
project_urls=
    Source = https://github.com/subaquatic-pierre/postmanager
    Tracker = https://github.com/alexmalins/subaquatic-pierre/postmanager/issues
    Documentation = https://subaquatic-pierre.github.io/postmanager
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
packages = find:
zip_safe = no
python_requires = >=3.7,<4
package_dir =
    =src
install_requires =
    boto3

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    tests*

[options.entry_points]
console_scripts = 
    postmanager = postmanager.cli:main

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
postmanager = py.typed

[flake8]
max-line-length = 160