[metadata]
name = postmanager
version = 0.1.6
description = Content manager for all types of content, blog posts, galleries, personal records, etc.
long_description = file: README.md
long_description_content_type = text/markdown
license= MIT
license_file= LICENSE
platforms = unix, linux, osx, cygwin, win32
author = Pierre du Toit
url = https://subaquatic-pierre.github.io/postmanager
github_project = https://github.com/subaquatic-pierre/postmanager
author_email= subaquatic.pierre@gmail.com
project_urls=
    Source = https://github.com/subaquatic-pierre/postmanager
    Tracker = https://github.com/alexmalins/subaquatic-pierre/postmanager/issues
    Documentation = https://subaquatic-pierre.github.io/postmanager
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
packages = find:
zip_safe = no
python_requires = >=3.9,<4
package_dir =
    =src
install_requires =
    boto3

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    tests*

[options.entry_points]
console_scripts = 
    postmanager = postmanager.cli.cli:main

[options.extras_require]
testing =
    pytest>=6.0
    coverage==4.4.1
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
postmanager = py.typed

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401